@@ -1,6 +1,9 @@
-Wed Sep  9 11:28:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Wed Sep  9 11:45:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* dir.c (dir_data_type): typed.
+
+	* enumerator.c (enumerator_data_type): typed.
+	  (yielder_data_type, generator_data_type): ditto.
 
 Wed Sep  9 11:11:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
